# e2-sat-editor

./: .gitignore  BUGS.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE-GPL-3.0-or-later  LICENSE_NOTICE_GPL-3.0-or-later  README.md  ROADMAP.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  localization.yml
.github/workflows/: auto-assign.yml  build-cli-linux-aarch64-appimage-testing.yaml  build-cli-linux-appimage.yaml  build-linux-aarch64-appimage-testing.yaml  build-linux-appimage.yml  build-macos-intel.yml  build-macos-silicon.yml  build-user-manual.yml  build-win32.yml  build-win64-aarch64-testing.yml  build-win64.yml  test-cli-linux-appimage.yaml  test-linux-appimage.yml  test-macos-silicon.yml  test-user-manual.yml  user-manual.yml
res/: AUTHORS  enigma_db.qrc  icon.afdesign  resources-toolbar-macx.qrc  resources-toolbar.qrc  resources.qrc
res/e2-sat-editor/: icon.afdesign
res/iconset-derived/: iconset-derived.afdesign
res/locale/: e2se_bg.qm  e2se_da.qm  e2se_fa.qm  e2se_fi.qm  e2se_gd.qm  e2se_gl.qm  e2se_it.qm  e2se_ja.qm  e2se_ko.qm  e2se_nl.qm  e2se_nn.qm  e2se_pt_PT.qm  e2se_ru.qm  e2se_sk.qm  e2se_sl.qm  e2se_sv.qm  e2se_tr.qm  e2se_uk.qm  e2se_zh_CN.qm  e2se_zh_TW.qm
scripts/: appimage-test-cli.sh  appimage-test.sh  build-darwin.sh  build-mingw.sh  build-qmake.sh  build.sh  darwin.sh  deployqtmacx.sh  deployqtwin.sh  flatpak-test.sh  icons.sh  mingw.sh  mingw32.sh  snapcraft-test.sh  test-appimage.sh  translations.sh  update-appimage-tools.sh
seeds./: NOTES  README  atsc-xml.html  blacklist.html  bouquets-radio.html  bouquets-tv.html  cables-xml.html  enigma_db.html  index.html  lamedb.html  satellites-xml.html  terrestrial-xml.html  userbouquet-dbe01-radio.html  userbouquet-dbe01-tv.html  userbouquet-dbe02-radio.html  userbouquet-dbe02-tv.html  userbouquet-dbe03-radio.html  userbouquet-dbe03-tv.html  userbouquet-dbe04-tv.html
seeds./enigma_db/: atsc.xml  bouquets.radio  bouquets.tv  cables.xml  lamedb  lamedb5  satellites.xml  terrestrial.xml  userbouquet.dbe01.radio  userbouquet.dbe01.tv  userbouquet.dbe02.radio  userbouquet.dbe02.tv  userbouquet.dbe03.radio  userbouquet.dbe03.tv  userbouquet.dbe04.tv
src/: CMakeLists.txt  COPYING  LICENSE  build.sh  commons.h  darwin.sh  e2-sat-editor.pro  e2db.cpp  e2db.h  e2se_defs.h  ftpcom.cpp  ftpcom.h  gui_qt6.cpp  gui_qt6.h  logger.cpp  logger.h  main.cpp  qrc_resources-toolbar-macx.cpp
src/cli/: .gitignore  CMakeLists.txt  cli.cpp  cli.h  e2db-cli.cpp  e2db-cli.h  e2db_cli.cpp  e2db_cli.h  e2db_termctl.cpp  e2db_termctl.h  main.cpp  termctl.cpp  termctl.h
src/e2db/: e2db.cpp  e2db.h  e2db_abstract.cpp  e2db_abstract.h  e2db_console.cpp  e2db_console.h  e2db_converter.cpp  e2db_converter.h  e2db_maker.cpp  e2db_maker.h  e2db_parser.cpp  e2db_parser.h  e2db_utils.cpp  e2db_utils.h
src/ftpcom/: ftpcom.cpp  ftpcom.h
src/gui/: BouquetsEventHandler.cpp  BouquetsEventHandler.h  DropEventHandler.h  ListEventHandler.cpp  ListEventHandler.h  ListEventObserver.cpp  ListEventObserver.h  TreeEventObserver.h  TreeStyledItemDelegate.h  WidgetWithBackdrop.cpp  WidgetWithBackdrop.h  about.cpp  about.h  channelBook.cpp  channelBook.h  channelBookView.cpp  channelBookView.h  checkUpdate.cpp  checkUpdate.h  connectionPresets.cpp  connectionPresets.h  console_gui.cpp  console_gui.h  convertM3u.cpp  convertM3u.h  dataHandler.cpp  dataHandler.h  dialAbstract.cpp  dialAbstract.h  dialChannelBook.cpp  dialChannelBook.h  dialConvertM3u.cpp  dialConvertM3u.h  e2db.cpp  e2db.h  e2db_console_gui.cpp  e2db_console_gui.h  e2db_gui.cpp  e2db_gui.h  e2db_qt_i18n.h  (+54 more)
src/gui/qss/: pseudometrodark-fusion-win.qss  pseudotealdark-win.qss  win-fusion-dark.qss  win-style-dark.qss
src/gui/toolkit/: BouquetsEventHandler.cpp  BouquetsEventHandler.h  ConsoleWidget.cpp  ConsoleWidget.h  DialogDockWidget.cpp  DialogDockWidget.h  InputControlEditEventObserver.cpp  InputControlEditEventObserver.h  ListEventHandler.cpp  ListEventHandler.h  ListEventObserver.cpp  ListEventObserver.h  ListIconDragDropEventHandler.cpp  ListIconDragDropEventHandler.h  ListProxyStyle.h  TabBarProxyStyle.h  ThemeChangeEventObserver.h  TreeDragDropEventHandler.cpp  TreeDragDropEventHandler.h  TreeDropIndicatorEventPainter.cpp  TreeDropIndicatorEventPainter.h  TreeEventHandler.cpp  TreeEventHandler.h  TreeItemChangedEventObserver.cpp  TreeItemChangedEventObserver.h  TreeProxyStyle.h  TreeStyledItemDelegate.h  WidgetBackdrop.cpp  WidgetBackdrop.h  WidgetEventHandler.cpp  WidgetEventHandler.h  WidgetWithBackdrop.cpp  WidgetWithBackdrop.h
src/logger/: logger.cpp  logger.h
translations/: e2se_ar.ts  e2se_bg.ts  e2se_ca.ts  e2se_cs.ts  e2se_da.ts  e2se_de.ts  e2se_en.ts  e2se_en_EN.ts  e2se_en_US.ts  e2se_es.ts  e2se_fa.ts  e2se_fi.ts  e2se_fr.ts  e2se_gd.ts  e2se_gl.ts  e2se_he.ts  e2se_hr.ts  e2se_hu.ts  e2se_it.ts  e2se_ja.ts  e2se_ko.ts  e2se_lt.ts  e2se_lv.ts  e2se_nl.ts  e2se_nn.ts  e2se_pl.ts  e2se_pt_BR.ts  e2se_pt_PT.ts  e2se_ru.ts  e2se_sk.ts  e2se_sl.ts  e2se_sv.ts  e2se_tr.ts  e2se_uk.ts  e2se_zh_CN.ts  e2se_zh_TW.ts
translations.bak/: e2se_ar.ts  e2se_bg.ts  e2se_ca.ts  e2se_cs.ts  e2se_da.ts  e2se_de.ts  e2se_en_EN.ts  e2se_en_US.ts  e2se_es.ts  e2se_fa.ts  e2se_fi.ts  e2se_fr.ts  e2se_gd.ts  e2se_gl.ts  e2se_he.ts  e2se_hr.ts  e2se_hu.ts  e2se_it.ts  e2se_ja.ts  e2se_ko.ts  e2se_lt.ts  e2se_lv.ts  e2se_nl.ts  e2se_nn.ts  e2se_pl.ts  e2se_pt_BR.ts  e2se_pt_PT.ts  e2se_ru.ts  e2se_sk.ts  e2se_sl.ts  e2se_sv.ts  e2se_tr.ts  e2se_uk.ts  e2se_zh_CN.ts  e2se_zh_TW.ts
workspace/: install-pipdeps.sh  install-pythonenv.sh  start-ftp.py  start-telnet.py  start-webif.py  start.py  start.sh  start.shs  stop.sh  stop.shs
